<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:orientation="horizontal"
    tools:ignore="SpUsage,RtlHardcoded,UseCompoundDrawables">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_white" />

    <TextView
        android:maxLines="1"
        android:maxLength="@integer/max_title_length"
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/bar_title_margin"
        android:fontFamily="@font/albertus"
        android:textColor="@android:color/white"
        android:textSize="@dimen/bar_title_size" />
</LinearLayout>
