<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    tools:context=".ui.gallery.GalleryActivity"
    tools:ignore="ContentDescription">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_gallery_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/pb_gallery_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/iv_no_wifi"
        android:layout_width="@dimen/no_internet_view_size"
        android:layout_height="@dimen/no_internet_view_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/no_wifi"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:fontFamily="@font/albertus"
        android:text="@string/no_results"
        android:textSize="@dimen/error_text_size"
        android:visibility="invisible" />
</RelativeLayout>
