...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.ImageDetailsActivity">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/iv_image_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:scaleType="centerInside" />

    <ProgressBar
...
